<resources>
    <string name="app_name">BookLecture</string>
    <string name="title">Book Lecture</string>
    <string name="getLocation">Get Location -></string>
    <string name="subjects">Subjects</string>
    <string name="live_topics">Live Topics</string>
    <string name="online_streaming">Online Streaming</string>
    <string name="events">Events</string>
    <string name="benefits"><![CDATA[Training From Experts \nAffordable Fees \nLatest Syllabus \nHands on Training - Approx 25% Theory & 75% Practicals \nCertification & Job Oriented Course \nProfessional Notes & Guidance \nLive Projects / Case Studies \nInterview Preparation & Resume Building \nDedicated Placement Team \n100% Job Opportunities ! \nFree Demo etc. \nOverall 30+ Courses - 1000+ Companies - Since 2014!]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ac_non_ac">Ac, Non Ac</string>
    <string name="hindi_english">Hindi, English</string>
    <string name="our_benefits">Our Benefits</string>
    <string name="book_seat">Book Seat</string>
    <string name="placeName">coaching place</string>
    <string name="address">placeAddress</string>
    <string name="dateTime">Date - Time</string>
    <string name="density">Size</string>
    <string name="contact">Contact</string>
    <string name="Availability">Availability</string>
    <string name="next">Next</string>
    <string name="fees">₹2300.90</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="terms_and_conditions">Terms and Conditions</string>

    <string name="termsConditions">
        1. Tickets once booked cannot be exchanged or refunded<br />

        2. An Internet handling fee per ticket may be levied. Please check the total amount before payment<br />

        3. Recording or uploading of this stream is not permitted. Strict action will be taken against those who break these guidelines.<br />

        4. The time and date of the show may vary due to internet connectivity issues. In this case, the artist will share the revised date and/or timing at the earliest<br />

        5. There may be interruptions in the stream due to internet connectivity issue. We suggest you to have good speed internet connectivity<br />

        6. These terms and conditions are subject to change from time to time at the discretion of the organizer

</string>
    <string name="payment">Payment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proceed">Proceed</string>
</resources>