<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTopBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/tvTopBarTitle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#152238"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvBookLectures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTopBarTitle" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/getLocation"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="@id/tvBookLectures"
                app:layout_constraintTop_toBottomOf="@id/tvBookLectures" />

            <ImageView
                android:id="@+id/ivScanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="5dp"
                android:src="@drawable/scanner"
                app:layout_constraintBottom_toBottomOf="@id/tvTopBarTitle"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTopBarTitle" />

            <ImageView
                android:id="@+id/ivNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="5dp"
                android:src="@drawable/notification"
                app:layout_constraintBottom_toBottomOf="@id/tvTopBarTitle"
                app:layout_constraintRight_toLeftOf="@id/ivScanner"
                app:layout_constraintTop_toTopOf="@id/tvTopBarTitle" />

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="5dp"
                android:src="@drawable/search"
                app:layout_constraintBottom_toBottomOf="@id/tvTopBarTitle"
                app:layout_constraintRight_toLeftOf="@id/ivNotification"
                app:layout_constraintTop_toTopOf="@id/tvTopBarTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layoutTopBar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/parent_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_200">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/view_pager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabDots"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        app:tabBackground="@drawable/tab_layout"
                        app:tabIndicatorHeight="1dp"
                        app:tabMode="fixed" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvSubjects"
                    style="@style/textView"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_below="@id/parent_view"
                    android:text="@string/subjects" />

                <HorizontalScrollView
                    android:id="@+id/hrvSubjects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvSubjects"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ivPhysicsSub"
                            style="@style/circleViewImage"
                            android:src="@drawable/phy" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ivChemistrySub"
                            style="@style/circleViewImage"
                            android:src="@drawable/c" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ivMathSub"
                            style="@style/circleViewImage"
                            android:src="@drawable/m" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ivBiologySub"
                            style="@style/circleViewImage"
                            android:src="@drawable/b" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ivCs"
                            style="@style/circleViewImage"
                            android:src="@drawable/computerscience" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ivEnglish"
                            style="@style/circleViewImage"
                            android:src="@drawable/eng" />

                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/tvLiveTopics"
                    style="@style/textView"
                    android:layout_below="@id/hrvSubjects"
                    android:text="@string/live_topics" />

                <HorizontalScrollView
                    android:id="@+id/hrvLiveTopics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvLiveTopics"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/developerLive"
                            style="@style/circleViewImage"
                            android:src="@drawable/programmer" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/engineeringLive"
                            style="@style/circleViewImage"
                            android:src="@drawable/engineer" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/scienceLive"
                            style="@style/circleViewImage"
                            android:src="@drawable/science" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/programmingLive"
                            style="@style/circleViewImage"
                            android:src="@drawable/developers" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/androidLive"
                            style="@style/circleViewImage"
                            android:src="@drawable/android" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/automationLive"
                            style="@style/circleViewImage"
                            android:src="@drawable/automation" />

                    </LinearLayout>
                </HorizontalScrollView>

                <View
                    android:id="@+id/midView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/hrvLiveTopics"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@color/dark_blue" />

                <TextView
                    android:id="@+id/tvOnlineStream"
                    style="@style/textView"
                    android:layout_below="@id/midView"
                    android:text="@string/online_streaming" />

                <HorizontalScrollView
                    android:id="@+id/hrvOnlineStream"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvOnlineStream"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/technologyOST"
                            style="@style/circleViewImage"
                            android:src="@drawable/technology" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/androidOST"
                            style="@style/circleViewImage"
                            android:src="@drawable/android" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/automationOST"
                            style="@style/circleViewImage"
                            android:src="@drawable/automation" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/csOST"
                            style="@style/circleViewImage"
                            android:src="@drawable/computerscience" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/roboticsOST"
                            style="@style/circleViewImage"
                            android:src="@drawable/robot" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            style="@style/circleViewImage"
                            android:src="@drawable/automation" />

                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/tvEvents"
                    style="@style/textView"
                    android:layout_below="@id/hrvOnlineStream"
                    android:text="@string/events" />

                <HorizontalScrollView
                    android:id="@+id/hrvEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvEvents"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/developersEvent"
                            style="@style/circleViewImage"
                            android:src="@drawable/developers" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/programmingEvent"
                            style="@style/circleViewImage"
                            android:src="@drawable/programmer" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/roboticsEvent"
                            style="@style/circleViewImage"
                            android:src="@drawable/robot" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/electronicsEvent"
                            style="@style/circleViewImage"
                            android:src="@drawable/electronics" />
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/engineeringEvent"
                            style="@style/circleViewImage"
                            android:src="@drawable/engineer" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/techEvent"
                            style="@style/circleViewImage"
                            android:src="@drawable/technology" />

                    </LinearLayout>
                </HorizontalScrollView>

            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>
</layout>